Made a few styling changes

--- a/apple.html
+++ b/apple.html
@@ -23,7 +23,7 @@
         </header>
 
         <nav class="container">
-            <button> <img id="logo" src="https://i.dlpng.com/static/png/5547519-apple-logo-png-transparent-background-107-images-in-collection-apple-logo-transparent-background-260_260_preview.png"></button>
+            <button> Home </button>
             <button> Store </button>
             <button> Mac </button>
             <button> iPod </button>
@@ -31,7 +31,7 @@
             <button> iPad </button>
             <button> iTunes </button>
             <button> Support </button>
-            <button> <input size="8px"> </button>
+            <button> <input size="8px" placeholder="Search"> </button>
         </nav>
         <div class="content">
             <p style="font-size: 65px;"> What will your verse be? </p>
